# multisight-ffmpeg

./: CMakeLists.txt
ffmpeg-Win64-artifacts/lib/: avcodec.exp  avcodec.lib  avdevice.exp  avdevice.lib  avfilter.exp  avfilter.lib  avformat.exp  avformat.lib  avutil.exp  avutil.lib  postproc.exp  postproc.lib  swresample.exp  swresample.lib  swscale.exp  swscale.lib
